Add canonical preference history
